# ai-danish-class

./: .gitignore  Readme.md  pyproject.toml
lesson_builder/: call-elevenlabs-api.py  convert_lesson_to_csv.py  create_weekly_lessons.py  generate_lesson_claude.py  prompt_manager.py  transcribe_audio_eleven_labs.py
lesson_builder/lesson_transcripts/: lesson_1_first_meetings.csv  lesson_2_work_and_studies.csv  test_danish_voice.csv
lesson_builder/prompts/: create_daily_news_section.txt  create_danish_introduction_section.md  prompts.py
lesson_builder/prompts/call_and_response/: metadata.yaml  system_prompt.md
lesson_builder/prompts/dialogue_focus/: metadata.yaml  system_prompt.md
lesson_builder/prompts/introduction_section/: metadata.yaml  system_prompt.md
lesson_builder/prompts/pattern_detective/: metadata.yaml  system_prompt.md
lesson_builder/prompts/quick_review/: metadata.yaml  system_prompt.md
lesson_builder/prompts/role_playing_section/: metadata.yaml  system_prompt.md
lesson_builder/prompts/scenario_practise/: metadata.yaml  (+1 more)
lesson_builder/resources/: voice_config.json
network_lesson_builder/prompts/: basic_conversations.md  conversation_expansion.md
network_lesson_builder/scripts/: clean_dupes.py
proof-of-concept/: call-elevenlabs-api.py  get-voices.py  input.csv  language_phrases.csv  lesson_structure.json  lesson_transcriber_prompt.md  lesson_types.json  list-of-models.py
resources/: danish_phrases_clean.csv  lessons_config.json  lessons_content_config.json  list_of_2000_phrases.csv  voice_config.json  weekly_structure_config.json
(+10 files in other folders)
